Fixed spacing issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -464,7 +464,7 @@ h1 .li, h2 .li, h3 .li, p .li {
 #embed01 .frame iframe {
 	max-width: 100%;
 	width: 20rem;
-	height: 15rem;
+	height: 11rem;
 }
 
 .gallery .inner {
